fixed issue where background image was not centered and did not cover whole div.

--- a/index.css
+++ b/index.css
@@ -14,6 +14,8 @@ div::after{
     content: "";
     background-image: url("TrainStations_7.jpeg");
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
     opacity: 0.60;
     top: 0;
     left: 0;
